--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 <body class="">
 @@include('components/header.html')
 <main>
+<!--    @@include('components/works.html')-->
+    @@include('components/vision.html')
     @@include('components/faq.html')
 </main>
 @@include('components/footer.html')
