--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,16 @@
 <body class="">
 @@include('components/header.html')
 <main>
-<!--    @@include('components/works.html')-->
+
+    @@include('components/intro.html')
+    @@include('components/video.html')
+    @@include('components/goals.html')
+    @@include('components/howit.html')
+    @@include('components/works.html')
+    @@include('components/important.html')
+    @@include('components/request.html')
     @@include('components/vision.html')
+    @@include('components/state.html')
     @@include('components/faq.html')
 </main>
 @@include('components/footer.html')
