--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
     @@include('components/video.html')
     @@include('components/goals.html')
     @@include('components/howit.html')
+    @@include('components/calculator.html')
+    @@include('components/clients.html')
     @@include('components/works.html')
     @@include('components/important.html')
     @@include('components/request.html')
