--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Gulp with TailwindCSS v3</title>
+    <title>Karpett — Կարպետը Հայաստանում առաջին ընկերությունն է, որը որպես գորգերի վարձույթի ծառայություն առաջարկում է գորգեր՝ պրոֆեսիոնալ լուծումներով:</title>
+    <link rel="icon" href="img/cropped-karpett-favicon-32x32.png" sizes="32x32">
+    <link rel="icon" href="img/cropped-karpett-favicon-192x192.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="img/cropped-karpett-favicon-180x180.png">
+    <meta name="msapplication-TileImage" content="img/cropped-karpett-favicon-270x270.png">
     <link rel="stylesheet" type="text/css" href="./css/style.css"/>
 </head>
 <body class="">
 @@include('components/header.html')
 <main>
-
     @@include('components/intro.html')
     @@include('components/video.html')
     @@include('components/goals.html')
